--- a/package.json
+++ b/package.json
@@ -9,38 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
+    "@babel/core": "^7.23.7",
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.23.4",
+    "@sanity/vision": "^3.25.0",
     "@stripe/stripe-js": "^2.2.2",
     "canvas-confetti": "^1.9.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.303.0",
-    "next": "14.0.4",
-    "next-sanity": "^7.0.5",
+    "install": "^0.13.0",
+    "next": "^14.0.4",
+    "next-sanity": "^7.0.10",
     "next-sanity-image": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "sanity": "^3.23.4",
+    "sanity": "^3.25.0",
     "stripe": "^14.10.0",
-    "styled-components": "^6.1.6",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-is": "^18.2.4",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "eslint-config-next": "14.0.4"
   }
 }
